--- a/src/components/ProductComponent/Product.css
+++ b/src/components/ProductComponent/Product.css
@@ -1,4 +1,3 @@
-
 .header-pro {
     display: flex;
     justify-content: space-between;
@@ -78,13 +77,15 @@
 
 .is-featured {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: red;
-    color: white;
-    padding: 5px 10px;
-    border-radius: 5px;
-    font-size: 0.8rem;
+    top: 0; 
+    right: 0; 
+    background-color: red; 
+    color: white; 
+    padding: 5px 10px; 
+    border-radius: 0 0 0 5px;
+    font-size: 0.8rem; 
+    font-weight: bold; 
+    z-index: 10; 
 }
 
 /*star*/
@@ -126,6 +127,7 @@
     font-size: 20px;
     color: #00f;
 }
+
 /*Card*/
 .red {
     color: red;
@@ -133,4 +135,16 @@
 
 .green {
     color: green;
+}
+.timer {
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    background-color: #ff0000; 
+    color: white;
+    padding: 5px 10px; 
+    border-radius: 0 0 5px 0; 
+    font-size: 0.9rem; 
+    font-weight: bold; 
+    z-index: 10; 
 }
